# wasm-playground

./: README.md
earth/: composer.json  package-lock.json  package.json  webpack.mix.js
earth/app/Http/Controllers/: AddOneController.php  AdderController.php  PathSumCostController.php  ShortestPathController.php  SumController.php  SummerController.php  Timer.php
earth/app/Http/Controllers/Graph/: DisplayableGraph.php  DisplayableNode.php  DisplayablePath.php
earth/app/Tesseract/: ShortestPathReturn.php  TesseractController.php  WasmController.php
earth/app/Tesseract/Wasm/Struct/: Graph.php  Path.php  WasmStruct.php
earth/public/css/: app.css
earth/public/js/: app.js
earth/resources/js/: app.js
earth/resources/views/: container.blade.php  welcome.blade.php
earth/resources/views/content/: shortestpath.blade.php
earth/routes/: web.php
playbooks/: ansible.cfg  deploy_php.yml
playbooks/env.example/: hosts.ini  vars.yml
playbooks/provision/ubuntu/: create_user.yml  main.yml
playbooks/roles/nginx/defaults/: main.yml
playbooks/roles/nginx/tasks/: configure_domain.yml  main.yml  setup_certbot.yml
playbooks/roles/php-server/handlers/: main.yml
playbooks/roles/php-server/tasks/: install_demo_server.yml  install_nginx.yml  install_php8.yml  install_wasm_ext.yml  main.yml
playbooks/roles/php-server/templates/: nginx-php.j2
playbooks/roles/wasm-rust/tasks/: main.yml
playbooks/templates/: https.j2  php-balancer.nginx.j2
tesseract/: Cargo.toml
tesseract/src/: lib.rs
