[package]
name = "tesseract"
version = "0.1.0"
authors = ["Agus Sentosa Hermawan <agus.sentosa787@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = "0.2"

# new material
[lib]
crate-type = ["cdylib"]

[features]
# Add feature "foo" here, then you can use it.
# Our "foo" feature depends on nothing else.
wee = []

[profile.release]
lto = true
